# swig-wrapper-exeriments

./: .gitignore  README.md
cmake/: CMakeLists.txt
cmake/First/: CMakeLists.txt  First.cmake
cmake/Second/: CMakeLists.txt  Second.cmake
src/Common/: Engine.h
src/First/: First.cpp  First.h
src/Second/: Second.h
src/Second/private/: Second.cpp  SecondImpl.h
swig/: engine.i  second.i
